--- a/KalypsoModelRisk/src/org/kalypso/risk/i18n/messages_de.properties
+++ b/KalypsoModelRisk/src/org/kalypso/risk/i18n/messages_de.properties
@@ -200,6 +200,7 @@ org.kalypso.risk.model.simulation.RiskZonesCalculationHandler.7=Berechnung der R
 org.kalypso.risk.model.simulation.RiskZonesCalculationHandler.9=erstellt am
 org.kalypso.risk.model.simulation.RiskZonesGrid.0=Wert konnte nicht berechnet werden ...
 org.kalypso.risk.model.simulation.RiskZonesGrid.1=Several specific damage collections with the same return period detected\: 
+org.kalypso.risk.model.simulation.RiskZonesGrid.2=Landnutzungskategorie nicht definiert (Freifl\u00E4che/bebaute Fl\u00E4che).
 org.kalypso.risk.model.simulation.SimulationKalypsoRisk_RiskZonesCalculation.18=error while comupting risk statistic table
 org.kalypso.risk.model.simulation.SimulationKalypsoRisk_RiskZonesCalculation.4=\: 
 org.kalypso.risk.model.simulation.SimulationKalypsoRisk_SpecificDamageCalculation.0=Fehler beim Berechnen der Schadenswerte. Keine Wassertiefen vorhanden.
