--- a/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -44,7 +44,7 @@ RrmSimulation.3=Zufluss
 RrmSimulation.2=Pegel
 RrmSimulation.1=Niederschlag
 RrmSimulation.0=Klima
-HydroHash_0=Kein Hydrotop f\u00FCr Teileinzugsgebiet gefunden '%s'
+HydroHash_0=Kein Teileinzugsgebiet gefunden für Hydrotop '%s'
 HydrotopeCreationOperation.4=\u00DCberpr\u00FCfe Hydrotope
 HydrotopeCreationOperation.3=Kombiniere Hydrotope mit gleichen Eigenschaften.
 HydrotopeCreationOperation.2=Kritscher Fehler bei \u00DCberpr\u00FCfung der Eingangsdaten aufgetreten. Eine weitere Verarbeitung nicht m\u00F6glich.
