--- a/trunk/KalypsoUIRRM/plugin_de.properties
+++ b/trunk/KalypsoUIRRM/plugin_de.properties
@@ -1,6 +1,6 @@
 #Fri Jun 22 11:12:42 CEST 2012
-Bundle-Name=
-Bundle-Vendor=
+Bundle-Name=KalypsoUIRRM Plug-in
+Bundle-Vendor=kalypso.sourceforge.net
 Category.name=Niederschlag-Abfluss Modell
 KalypsoUIRRM.updateKMParameter.label=KM Parameter berechnen
 KalypsoUIRRM.updateKMParameter.tooltip=Startet den Dialog zur Berechnung der Kalinin-Miljukov Parameter der selektierten KM Str\u00E4nge
