Fixed some sub optimal translations

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -257,12 +257,12 @@ EditCalibrationTaskHandler_0=Kalinin-Miljukov Channels
 EditCalibrationTaskHandler_1=Storage Channels
 EditCalibrationTaskHandler_2=Catchments
 EditGeneratorAction.0=%s. This could have happened because the model has changed. The catchments will be newly initialized...
-EditGeneratorAction.1=Failed to edit the catchment model...
+EditGeneratorAction.1=Failed to edit the generator...
 EditGeneratorAction_0=Edit
 EditGeneratorAction_1=Edits the properties of the generator
 EditLinearSumDialog.0=Dialog has validation errors. %s
 EditLinearSumDialog.1=Changing the parameter type needs to update the list of timeseries. Unsaved changes will be lost. Continue?
-EditLinearSumDialog_0=Edit Catchment Model
+EditLinearSumDialog_0=Edit Generator
 EditLinearSumDialog_1=Generator
 EditLinearSumDialog_10=Quality
 EditLinearSumDialog_11=Factor [%]
@@ -553,7 +553,7 @@ OpenTextLogAction_0=The text file '%s' does not exist...
 OpenTextLogAction_2=The file could not be opened...
 ParameterComposite_0=Name
 ParameterComposite_1=Unit
-ParameterGeneratorUiHandler.0=Catchment models -
+ParameterGeneratorUiHandler.0=Catchment models - %s
 ParameterGeneratorUiHandler_0=Parameter Type
 ParameterTypeFilterControl_0=<Empty selection>
 ParameterUiHandler_0=Parameter Type
