--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -90,13 +90,13 @@ CalculateSimulationDialog_7=Ist diese Option aktiviert werden die Anfangswerte b
 CalculateSimulationDialog_8=Berechne
 CalculateSimulationRunnable_0=dd.MM.yy HH\:mm
 CalculateSimulationRunnable_1=Berechne Simulationen...
-CalculateSimulationRunnable_10=Berechne Teileinzugsgebiete...
+CalculateSimulationRunnable_10=Berechne Gebietsmodelle...
 CalculateSimulationRunnable_11=Berechnung der Simulation...
 CalculateSimulationRunnable_12=Abschlie\u00DFen...
 CalculateSimulationRunnable_13=Berechnung beendet um %s.
 CalculateSimulationRunnable_14=Berechnung '%s' wurde erfolgreich (ohne Fehler) durchgef\u00FChrt.
-CalculateSimulationRunnable_15=Es werden alle zugewiesene Teileinzugsgebiete ignoriert, f\u00FCr Modelle mit synthetischem Niederschlag.
-CalculateSimulationRunnable_16=Es m\u00FCssen alle Teileinzugsgebiete zugewiesen werden.
+CalculateSimulationRunnable_15=Es werden alle zugewiesene Gebietsmodelle ignoriert, f\u00FCr Modelle mit synthetischem Niederschlag.
+CalculateSimulationRunnable_16=Es m\u00FCssen alle Gebietsmodelle zugewiesen werden.
 CalculateSimulationRunnable_17=Berechnung von '%s'
 CalculateSimulationRunnable_2=Berechne Simulationen\u2026
 CalculateSimulationRunnable_3=Berechne Simulation %d von %d
@@ -131,7 +131,7 @@ CatchmentModelHelper_19=Die neue Zeitreihe konnte nicht verglichen werden. Grund
 CatchmentModelHelper_2=Das Gebietsmodell '%s' ist nicht vom Typ ILinearSumGenerator
 CatchmentModelHelper_20=Das Gebietsmodell enth\u00E4lt eine unterschiedliche Anzahl von Gebieten als das Modell.
 CatchmentModelHelper_21=Das Gebietsmodell enth\u00E4lt Gebiete in einer anderen Reihenfolge als das Modell.
-CatchmentModelHelper_22=Die Teileinzugsgebiete stimmen nicht \u00FCberein.
+CatchmentModelHelper_22=Die Gebietsmodelle stimmen nicht \u00FCberein.
 CatchmentModelHelper_3=Die Teileinzugsgebiete des Gebietsmodells '%s' stimmen nicht mit den Teileinzugsgebiete des ersten Gebietsmodells '%s' \u00FCberein.
 CatchmentModelHelper_4=Der G\u00FCltigkeitsbereich des Gebietsmodells '%s' schneidet sich mit dem G\u00FCltigkeitsbereich eines anderen Gebietsmodells.
 CatchmentModelHelper_5=Es sind L\u00FCcken in den G\u00FCltigkeitsbereichen der Gebietsmodelle des Gesamtgebietsmodells '%s' vorhanden.
@@ -255,9 +255,9 @@ DeleteTimeseriesOperation_2=L\u00F6sche Zeitreihen
 DesignRainfallDefinitionTaskHandler_0=Synthetische Niederschlags-Definitionen
 EditCalibrationTaskHandler_0=Kalinin-Miljukov Strang
 EditCalibrationTaskHandler_1=Speicherstrang
-EditCalibrationTaskHandler_2=Einzugsgebiete
+EditCalibrationTaskHandler_2=Teileinzugsgebiete
 EditGeneratorAction.0=%s. Kann durch \u00C4nderung des Modells passiert sein. Die Teileinzugsgebiete werden neu initialisiert\u2026
-EditGeneratorAction.1=Bearbeitung des Teileinzugsgebiets fehlgeschlagen\u2026
+EditGeneratorAction.1=Bearbeitung des Gebietsmodells fehlgeschlagen\u2026
 EditGeneratorAction_0=Bearbeite
 EditGeneratorAction_1=Bearbeite die Eigenschaften des Gebietsmodells
 EditLinearSumDialog.0=Dialog\u00FCberpr\u00FCfung ergab Fehler. %s
@@ -553,7 +553,7 @@ OpenTextLogAction_0=Die Datei '%s' existiert nicht...
 OpenTextLogAction_2=Die Datei konnte nicht ge\u00F6ffnet werden...
 ParameterComposite_0=Name
 ParameterComposite_1=Einheit
-ParameterGeneratorUiHandler.0=Teileinzugsgebiete
+ParameterGeneratorUiHandler.0=Gebietsmodelle - %s
 ParameterGeneratorUiHandler_0=Parametertyp
 ParameterTypeFilterControl_0=<Keine Auswahl>
 ParameterUiHandler_0=Parametertyp
