Fixed: legend and polynomes of 1d-relations was broken. Some cleanup; translations of tabs

--- a/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/catalog/messages_de.properties
+++ b/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/catalog/messages_de.properties
@@ -17,3 +17,7 @@ controlModel.gft.wavesAdvancedSettings=Zusätzliche Parameter
 controlModel.gft.wavesResultSettings=Zusätzliche Ergebnisausgaben
 controlModel.gft.wavesWindSettings=Windeinstellungen
 controlModel.gft.checkbox.active=Aktivieren
+
+teschkeFlowRelation.gft.tab.runoff=Abfluss
+teschkeFlowRelation.gft.tab.area=Fläche
+teschkeFlowRelation.gft.tab.alpha=Alpha
