--- a/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/catalog/messages.properties
+++ b/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/ui/catalog/messages.properties
@@ -19,3 +19,7 @@ controlModel.gft.wavesWindSettings=Wind Settings
 controlModel.gft.checkbox.active=Active
 controlModel.gft.steady_group=Steady Calculation
 controlModel.gft.unsteady_group=Transient Calculation
+
+teschkeFlowRelation.gft.tab.runoff=Discharge
+teschkeFlowRelation.gft.tab.area=Area
+teschkeFlowRelation.gft.tab.alpha=Alpha
