fixes the problem of export of profiles from 1d2d, now it is possible to select the export type, for profiles from 1d2d should be selected the one with "Profilelines" - this is the reused wizard from wspm.

--- a/KalypsoModel1D2D/plugin_de.properties
+++ b/KalypsoModel1D2D/plugin_de.properties
@@ -83,4 +83,6 @@ org.kalypso.model1d2d.removeBuildingParameter.description=Stützstellen editieren
 org.kalypso.model1d2d.saveBuildingParameter.name=Änderungen übernehmen
 org.kalypso.model1d2d.saveBuildingParameter.description=Änderungen übernehmen
 
+org.kalypso.model1d2d.exportProfiles.name=Profillinien
+
 org.kalypso.kalypsomodel1d2d.ui.map.function.BorderEdgeFunctionExpression.label=Border-Edges
