--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -95,9 +95,10 @@ CalculateSimulationRunnable_11=Calculating the simulation...
 CalculateSimulationRunnable_12=Finishing...
 CalculateSimulationRunnable_13=Calculation finished at %s.
 CalculateSimulationRunnable_14=Calculation of '%s' finished without errors.
-CalculateSimulationRunnable_15=All configured catchment models are ignored for simulations with design rainfall.
+CalculateSimulationRunnable_15=Catchment models not supported for simulations with design rainfall.
 CalculateSimulationRunnable_16=All catchment models must be configured.
 CalculateSimulationRunnable_17=Calculation of '%s'
+CalculateSimulationRunnable_18=Gauge or storage evaporation not supported for simulations with design rainfall.
 CalculateSimulationRunnable_2=Calculating simulations...
 CalculateSimulationRunnable_3=Calculating simulation %d of %d...
 CalculateSimulationRunnable_4=The calculation was finished.
@@ -567,7 +568,7 @@ PrepareLongtermSimulationWorker_5=Preparation of the simulation was successful.
 PrepareLongtermSimulationWorker_6=Error during preparation of the simulation.
 PrepareShorttermSimulationWorker_0=Preparing simulation...
 PrepareShorttermSimulationWorker_1=Preparing simulation...
-PrepareShorttermSimulationWorker_11=Failed to copy initial values from simulation '%s'\: Initial values missing (%s).
+PrepareShorttermSimulationWorker_11=Initial values missing for simulation '%s' (%s)
 PrepareShorttermSimulationWorker_12=Initial values were loaded from simulation '%s'.
 PrepareShorttermSimulationWorker_13=Failed to load initial values from simulation '%s'.
 PrepareShorttermSimulationWorker_2=This is a short term simulation.
