--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -95,9 +95,10 @@ CalculateSimulationRunnable_11=Berechnung der Simulation...
 CalculateSimulationRunnable_12=Abschlie\u00DFen...
 CalculateSimulationRunnable_13=Berechnung beendet um %s.
 CalculateSimulationRunnable_14=Berechnung '%s' wurde erfolgreich (ohne Fehler) durchgef\u00FChrt.
-CalculateSimulationRunnable_15=Es werden alle zugewiesene Gebietsmodelle ignoriert, f\u00FCr Modelle mit synthetischem Niederschlag.
+CalculateSimulationRunnable_15=Angabe von Gebietsmodellen nicht erlaubt bei Modellen mit synthetischem Niederschlag.
 CalculateSimulationRunnable_16=Es m\u00FCssen alle Gebietsmodelle zugewiesen werden.
 CalculateSimulationRunnable_17=Berechnung von '%s'
+CalculateSimulationRunnable_18=Angabe von Pegelganglinien oder Speicherverdunstung nicht erlaubt bei Modellen mit synthetischem Niederschlag.
 CalculateSimulationRunnable_2=Berechne Simulationen\u2026
 CalculateSimulationRunnable_3=Berechne Simulation %d von %d
 CalculateSimulationRunnable_4=Die Berechnung wurde abgeschlossen.
@@ -567,7 +568,7 @@ PrepareLongtermSimulationWorker_5=Simulation erfolgreich vorbereitet.
 PrepareLongtermSimulationWorker_6=Vorbereiten der Simulation fehlgeschlagen.
 PrepareShorttermSimulationWorker_0=Vorbereitung der Simulation...
 PrepareShorttermSimulationWorker_1=Vorbereitung der Simulation...
-PrepareShorttermSimulationWorker_11=Fehler bei Kopieren der Anfangswerte aus der Simulation '%s'\: Initialwerte fehlen (%s)
+PrepareShorttermSimulationWorker_11=Anfangswerte für Simulation '%s' fehlen (%s)
 PrepareShorttermSimulationWorker_12=Anfangswerte wurden aus Simulation '%s' geladen.
 PrepareShorttermSimulationWorker_13=Fehler beim Laden der Anfangswerte aus Simulation '%s'.
 PrepareShorttermSimulationWorker_2=Dies ist eine Kurzzeitsimulation.
