--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -77,8 +77,6 @@ CalculateEvaporationAction_2=Mean temperature timeseries is missing.
 CalculateEvaporationAction_3=Mean wind velocity timeseries is missing.
 CalculateEvaporationAction_4=Sunshine day hours timeseries is missing.
 CalculateEvaporationAction_5=Missing input timeseries were detected. Please assign all missing input timeseries.
-CalculateEvaporationData_0=Land based evaporation
-CalculateEvaporationData_1=Water based evaporation
 CalculateSimulationDialog_0=Calculate Simulations
 CalculateSimulationDialog_1=Calculate Simulations
 CalculateSimulationDialog_2=Do you want to start the calculation? 'Ok' will start the calculation. 'Cancel' will abort.
@@ -179,7 +177,6 @@ ChooseEvaporationInputFilesPage_15=Couldn't determine calculation period. Missin
 ChooseEvaporationInputFilesPage_16=Yyyy-MM-dd HH\:mm
 ChooseEvaporationInputFilesPage_2=Please set all calculation data that will be serve as basis for the evaporation calculation.
 ChooseEvaporationInputFilesPage_3=Evaporation
-ChooseEvaporationInputFilesPage_4=Empty element. Assign a source element, please.
 ChooseEvaporationInputFilesPage_5=Calculation period
 ChooseEvaporationInputFilesPage_6=Start
 ChooseEvaporationInputFilesPage_9=End
@@ -329,9 +326,6 @@ EvaporationParameterPage_1=Calculation parameter
 EvaporationParameterPage_10=Quality
 EvaporationParameterPage_11=Invalid quality name
 EvaporationParameterPage_2=Please take a look at the calculation parameter.
-EvaporationParameterPage_3=Parameter
-EvaporationParameterPage_4=Longitude
-EvaporationParameterPage_5=Longitude is not a number
 EvaporationParameterPage_6=Parameter
 EvaporationParameterPage_7=Longitude
 EvaporationParameterPage_8=Longitude is not a number
@@ -691,7 +685,7 @@ ThiessenGeneratorWizard_2=Please select the timeseries that should be used to ge
 ThiessenWizardLayoutPart_0=General Properties
 ThiessenWizardLayoutPart_1=Timeseries used for Thiessen
 ThiessenWizardLayoutPart_2=Changing the parameter type needs to update the list of timeseries. Unsaved changes will be lost. Continue?
-TimeSeriesAlreadyExistsValidator_0=Evaporation timeseries of the same type already exists
+TimeSeriesAlreadyExistsValidator_0=Evaporation timeseries with same 'Quality' already exists
 TimeseriesBean_0=Data file missing
 TimeseriesBean_1=Data link not set
 TimeseriesBrowserSearchViewer_0=Station
