--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -77,8 +77,6 @@ CalculateEvaporationAction_2=Zeitreihe Mittlere Temperatur fehlt.
 CalculateEvaporationAction_3=Zeitreihe Windgeschwindigkeit fehlt.
 CalculateEvaporationAction_4=Zeitreihe Sonnenscheindauer fehlt.
 CalculateEvaporationAction_5=Bei der \u00DCberpr\u00FCfung der Eingangsdaten wurde festgestellt, dass Eingangsdaten fehlen. Bitte f\u00FCgen Sie die fehlenden Eingangsdaten zur Station hinzu.
-CalculateEvaporationData_0=Grasverdunstung
-CalculateEvaporationData_1=Seeverdunstungs
 CalculateSimulationDialog_0=Berechne Simulationen
 CalculateSimulationDialog_1=Berechne Simulationen
 CalculateSimulationDialog_2=M\u00F6chten Sie die Berechnung starten? 'OK' startet die Berechnung. \u201EAbbrechen\u201C bricht ab.
@@ -179,7 +177,6 @@ ChooseEvaporationInputFilesPage_15=Konnte Berechnungszeitraum nicht bestimmen. F
 ChooseEvaporationInputFilesPage_16=dd.MM.yyyy HH\:mm
 ChooseEvaporationInputFilesPage_2=Bitte bestimmen Sie alle Berechnungsdaten, die als Grundlage f\u00FCr die Berechnung der Verdunstung dienen.
 ChooseEvaporationInputFilesPage_3=Verdunstung
-ChooseEvaporationInputFilesPage_4=Leeres Element. Bitte weisen Sie alle Quellen zu.
 ChooseEvaporationInputFilesPage_5=Berechnungszeitraum
 ChooseEvaporationInputFilesPage_6=Start
 ChooseEvaporationInputFilesPage_9=Ende
@@ -329,9 +326,6 @@ EvaporationParameterPage_1=Berechnungsparameter
 EvaporationParameterPage_10=Quality
 EvaporationParameterPage_11=Ung\u00FCltiger Quality-Name
 EvaporationParameterPage_2=\u00C4ndern Sie die Berechnungsparameter wie gew\u00FCnscht.
-EvaporationParameterPage_3=Parameter
-EvaporationParameterPage_4=Breitengrad
-EvaporationParameterPage_5=Breitengrad ist kein g\u00FCltiger Zahlenwert.
 EvaporationParameterPage_6=Parameter
 EvaporationParameterPage_7=Breitengrad
 EvaporationParameterPage_8=Breitengrad ist kein g\u00FCltiger Zahlenwert.
@@ -691,7 +685,7 @@ ThiessenGeneratorWizard_2=Bitte w\u00E4hlen Sie die Zeitreihe die als Grundlage 
 ThiessenWizardLayoutPart_0=Allgemeine Einstellungen
 ThiessenWizardLayoutPart_1=F\u00FCr Thiessen verwendete Zeitreihen
 ThiessenWizardLayoutPart_2=\u00C4nderung des Parametertyps \u00E4ndert Liste der Zeitreihen. Nicht gespeicherte \u00C4nderungen gehen verloren. Fortfahren?
-TimeSeriesAlreadyExistsValidator_0=
+TimeSeriesAlreadyExistsValidator_0=Es existiert bereits eine Verdunstungszeitreihe mit dieser 'Qualität'
 TimeseriesBean_0=Datendatei fehlt
 TimeseriesBean_1=Verweis auf Daten nicht gesetzt
 TimeseriesBrowserSearchViewer_0=Station
