--- a/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
+++ b/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages.properties
@@ -362,3 +362,6 @@ org.kalypso.convert.namodel.net.visitors.SimulationVisitor.0=Netzplan ist fehler
 org.kalypso.convert.namodel.schema.binding.OverlayCollection.4=OverlayElement '%s' was removed by imported element '%s'
 org.kalypso.convert.namodel.schema.binding.OverlayCollection.3=OverlayElement '%s' was reduced by imported element '%s'
 HydrotopeCreationInputValidation.0=Validating layer %d of %d - %s
+WendlingLandbasedEvaporationCalculator_0=Land based evaporation (Wendling)
+FAOLandbasedEvaporationCalculator_0=Land based evaporation (FAO)
+WaterbasedEvaporationCalculator_0=Water based evaporation
