--- a/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoModelNA/src/org/kalypso/model/hydrology/internal/i18n/messages_de.properties
@@ -362,3 +362,6 @@ org.kalypso.convert.namodel.net.visitors.SimulationVisitor.0=Netzplan ist fehler
 org.kalypso.convert.namodel.schema.binding.OverlayCollection.4=OverlayElement '%s' was removed by imported element '%s'
 org.kalypso.convert.namodel.schema.binding.OverlayCollection.3=OverlayElement '%s' was reduced by imported element '%s'
 HydrotopeCreationInputValidation.0=\u00DCberpr\u00FCfe Layer %d von %d - %s
+WendlingLandbasedEvaporationCalculator_0=Grasverdunstung (nach Wendling)
+FAOLandbasedEvaporationCalculator_1=Grasverdunstung (FAO Methode)
+WaterbasedEvaporationCalculator_0=Seeverdunstung
