Fixed: result view did not recognize all result files. Using result descriptors of post processing now

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -384,25 +384,25 @@ ImportTimeseriesOperation_6=Error in time step validity detection.
 ImportTimeseriesOperation_7=R\u00FCcksprung detected at %s.
 ImportTimeseriesOperation_8=No R\u00FCcksprung detected.
 ImportTimeseriesOperation_9=Error in R\u00FCcksprung detection.
-KalypsoHydrologyResults_0=TODO Gesamtknotenabfluss
-KalypsoHydrologyResults_1=TODO Temperatur
-KalypsoHydrologyResults_10=TODO Grundwasserstand
-KalypsoHydrologyResults_11=TODO Evapotranspiration
-KalypsoHydrologyResults_12=TODO F\u00FCllvolumen
-KalypsoHydrologyResults_13=TODO Speicher\u00FCberlauf
-KalypsoHydrologyResults_14=TODO Messwerte\: Verdunstung
-KalypsoHydrologyResults_15=TODO Messwerte\: Zufluss
-KalypsoHydrologyResults_16=TODO Messwerte\: Niederschlag
-KalypsoHydrologyResults_17=TODO Messwerte\: Seeverdunstung
-KalypsoHydrologyResults_18=TODO Messwerte\: Temperatur
-KalypsoHydrologyResults_2=TODO Niederschlag
-KalypsoHydrologyResults_3=TODO Schneeh\u00F6he
-KalypsoHydrologyResults_4=TODO Gesamtteilgebietsabfluss
-KalypsoHydrologyResults_5=TODO Oberfl\u00E4chenabfluss, nat\u00FCrlich
-KalypsoHydrologyResults_6=TODO Oberfl\u00E4chenabfluss, versiegelt
-KalypsoHydrologyResults_7=TODO Interflow
-KalypsoHydrologyResults_8=TODO Basisabfluss
-KalypsoHydrologyResults_9=TODO Grundwasserabfluss
+KalypsoHydrologyResults_0=Total runoff
+KalypsoHydrologyResults_1=Temperature
+KalypsoHydrologyResults_10=Groundwater Level
+KalypsoHydrologyResults_11=Evapotranspiration
+KalypsoHydrologyResults_12=Volume
+KalypsoHydrologyResults_13=Overflow
+KalypsoHydrologyResults_14=Input\: Evaporation
+KalypsoHydrologyResults_15=Input\: Inflow
+KalypsoHydrologyResults_16=Input\: Rainfall
+KalypsoHydrologyResults_17=Input\: Sea evaporation
+KalypsoHydrologyResults_18=Input\: Temperature
+KalypsoHydrologyResults_2=Rainfall
+KalypsoHydrologyResults_3=Snow heights
+KalypsoHydrologyResults_4=Total runoff
+KalypsoHydrologyResults_5=Runoff, natural areas
+KalypsoHydrologyResults_6=Runoff, sealed areas
+KalypsoHydrologyResults_7=Interflow
+KalypsoHydrologyResults_8=Base runoff
+KalypsoHydrologyResults_9=Groundwater runoff
 KalypsoModuleRRM_0=Convert existing Projects
 KalypsoNAMappingData.0=No shape file loaded
 KalypsoNAMappingData.1=Loading shape file...
