--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -504,8 +504,7 @@ MergeTimeseriesOperation_0=Merging of observations failed.
 MergeTimeseriesOperation_1=Merge Timeseries Operation
 MergeTimeseriesOperation_2=Saving observation failed.
 MergeTimeseriesOperation_3=Merged observations
-MoveTimeSeriesOperation.0=Moving timeseries failed - couldn't create target time series
-MoveTimeSeriesOperation_0=Moving timeseries\: %s
+MoveTimeSeriesOperation.0=%s: failed to move timeseries - couldn't create target time series
 MultiBean_0=Refresh
 MultiBean_1=Refresh
 MultiCatchmentModelRunner_0=Apply multi catchment model
@@ -685,7 +684,7 @@ ThiessenGeneratorWizard_2=Please select the timeseries that should be used to ge
 ThiessenWizardLayoutPart_0=General Properties
 ThiessenWizardLayoutPart_1=Timeseries used for Thiessen
 ThiessenWizardLayoutPart_2=Changing the parameter type needs to update the list of timeseries. Unsaved changes will be lost. Continue?
-TimeSeriesAlreadyExistsValidator_0=Evaporation timeseries with same 'Quality' already exists
+TimeSeriesAlreadyExistsValidator_0=Evaporation timeseries with same timestep and quality already exists
 TimeseriesBean_0=Data file missing
 TimeseriesBean_1=Data link not set
 TimeseriesBrowserSearchViewer_0=Station
