--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -504,8 +504,7 @@ MergeTimeseriesOperation_0=Zusammenf\u00FChrung der Daten fehlgeschlagen
 MergeTimeseriesOperation_1=Zusammenf\u00FChrung von Zeitreihen
 MergeTimeseriesOperation_2=Speichern der Daten fehlgeschlagen.
 MergeTimeseriesOperation_3=Daten zusammengef\u00FChrt.
-MoveTimeSeriesOperation.0=Verschieben der Zeitreihe fehlgeschlagen. Konnte Ziel-Zeitreihe nicht anlegen.
-MoveTimeSeriesOperation_0=Verschiebe Zeitreihe\: %s
+MoveTimeSeriesOperation.0=%s: verschieben fehlgeschlagen, konnte Ziel-Zeitreihe nicht anlegen.
 MultiBean_0=Aktualisiere
 MultiBean_1=Aktualisiere
 MultiCatchmentModelRunner_0=Anwendung Gesamtgebietsmodell
@@ -685,7 +684,7 @@ ThiessenGeneratorWizard_2=Bitte w\u00E4hlen Sie die Zeitreihe die als Grundlage 
 ThiessenWizardLayoutPart_0=Allgemeine Einstellungen
 ThiessenWizardLayoutPart_1=F\u00FCr Thiessen verwendete Zeitreihen
 ThiessenWizardLayoutPart_2=\u00C4nderung des Parametertyps \u00E4ndert Liste der Zeitreihen. Nicht gespeicherte \u00C4nderungen gehen verloren. Fortfahren?
-TimeSeriesAlreadyExistsValidator_0=Es existiert bereits eine Verdunstungszeitreihe mit dieser 'Qualität'
+TimeSeriesAlreadyExistsValidator_0=Es existiert bereits eine Verdunstungszeitreihe mit gleichem Zeitschritt und Qualität
 TimeseriesBean_0=Datendatei fehlt
 TimeseriesBean_1=Verweis auf Daten nicht gesetzt
 TimeseriesBrowserSearchViewer_0=Station
