Better error message for empty node

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -319,7 +319,7 @@ EditTimeseriesMappingWizardPage_0=Properties
 EditTimeseriesMappingWizardPage_1=Edit the properties of the mapping on this page.
 EditTimeseriesQualityComposite_0=Station name contains invalid chars
 EditTimeseriesQualityComposite_1=Quality already exists.
-EmptyNodeUiHandler_0=<Empty>
+EmptyNodeUiHandler_0=<no element selected>
 EmptyNodeUiHandler_1=<empty database>
 EvaporationParameterPage_0=EvaporationParameterPage
 EvaporationParameterPage_1=Calculation parameter
