--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -185,7 +185,7 @@ ChooseTimeseriesDialog_0=W\u00E4hle Zeitreihe
 ChooseTimeseriesDialog_1=Suche
 ChooseZmlLinkFeatureViewControl_0=Error
 ChooseZmlLinkFeatureViewControl_1=Konnte 'stations.gml' nicht finden
-ChooseZmlLinkFeatureViewControl_2=<leer>
+ChooseZmlLinkFeatureViewControl_2=<kein Element selektiert>
 ChooseZmlLinkFeatureViewControl_3=%s\:
 ChooseZmlLinkFeatureViewControl_5=%s -
 ChooseZmlLinkFeatureViewControl_6=%s
