--- a/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -33,7 +33,7 @@ rrmParam_Parameter_rrmParam_drwbmDefinitionMember_tooltip=besteht aus DRWBM Defi
 rrmParam_Sealing_description=Die Versiegelungsklasse beinhaltet den Versiegelungsgrad, welcher die Aufteilung der Hydrotopfl\u00E4che in den nat\u00FCrlichen und den versiegelten (der Regenwasserkanalisation zuflie\u00DFenden) Anteil bestimmt.
 rrmParam_Sealing_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_Sealing_rrmParam_m_vers_label=Versiegelungsgrad
-rrmParam_Sealing_rrmParam_m_vers_tooltip=Versiegelungsgrad der Nutzung [-]
+rrmParam_Sealing_rrmParam_m_vers_tooltip=Versiegelungsgrad der Nutzung (0.0 - 1.0)
 rrmParam_Snow_description=Schneetyp, welcher im Teilgebiet referenziert wird (Key ist der Name\!)
 rrmParam_Snow_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_Snow_rrmParam_xh0_label=Anfangsschneeh\u00F6he
