--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -265,10 +265,10 @@ EditLinearSumDialog_1=Generator
 EditLinearSumDialog_10=Quality
 EditLinearSumDialog_11=Factor [%]
 EditLinearSumDialog_2=Timeseries
-EditLinearSumDialog_3=Catchments
+EditLinearSumDialog_3=Sub catchments
 EditLinearSumDialog_4=Name
 EditLinearSumDialog_5=Description
-EditLinearSumDialog_6=No catchment selected.
+EditLinearSumDialog_6=No sub catchment selected.
 EditLinearSumDialog_7=Group
 EditLinearSumDialog_8=Station
 EditLinearSumDialog_9=Time step
@@ -296,7 +296,7 @@ EditMultiDialog_9=Changing the parameter type needs to update the list of genera
 EditNetElementsTaskHandler_0=Loading map...
 EditNetElementsTaskHandler_2=Nodes
 EditNetElementsTaskHandler_4=Channels
-EditNetElementsTaskHandler_6=Catchments
+EditNetElementsTaskHandler_6=Sub Catchments
 EditNetRelationsTaskHandler_0=Loading map...
 EditRelationOperation.0=Operation failed
 EditRelationOperation_0=Remove Relation
@@ -346,7 +346,7 @@ HeavyRelationType.2=Please choose which kind of relation should be created\:
 HeavyRelationType.3=Create Relation
 HydrolgyManagementSearchControl_0=Result Type
 HydrotopesTaskHandler.0=Overlay (DRWBM)
-HydrotopesTaskHandler_0=Catchments
+HydrotopesTaskHandler_0=Sub Catchments
 HydrotopesTaskHandler_1=Landuse
 HydrotopesTaskHandler_2=Geology
 HydrotopesTaskHandler_3=Pedology
