Fixed some labels

--- a/KalypsoModelNA/etc/schema/gml/landuse_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/landuse_de.properties
@@ -8,7 +8,7 @@ rrmLanduse_LanduseCollection_rrmLanduse_landuseMember_label=Landnutzung
 rrmLanduse_LanduseCollection_rrmLanduse_landuseMember_tooltip=Landnutzung
 rrmLanduse_Landuse_description=Landnutzung
 rrmLanduse_Landuse_label=${listProperty\:http\://www.opengis.net/gml\#name;0;-Name unbekannt-}
-rrmLanduse_Landuse_rrmLanduse_corrSealing_label=Faktor Versiegelung
+rrmLanduse_Landuse_rrmLanduse_corrSealing_label=Korrektur Versiegelungsgrad
 rrmLanduse_Landuse_rrmLanduse_corrSealing_tooltip=Korrekturfaktor Versiegelungsgrad [-]
 rrmLanduse_Landuse_rrmLanduse_landuseclassLink_label=Landnutzung
 rrmLanduse_Landuse_rrmLanduse_landuseclassLink_tooltip=Landnutzung
