--- a/KalypsoModelNA/etc/schema/gml/namodell_de.properties
+++ b/KalypsoModelNA/etc/schema/gml/namodell_de.properties
@@ -102,7 +102,7 @@ rrm_Catchment_rrm_verdunstungZR_tooltip=Zeitreihe V lokal
 rrm_Catchment_rrm_zft_label=Zeitfl\u00E4chenfunktion
 rrm_Catchment_rrm_zft_tooltip=Zeitfl\u00E4chenfunktion, Abflusswirksame Fl\u00E4che in abh\u00E4ngigkeit der Zeit
 
-rrm_Catchment_rrm_corrSealing_label=Korrektur Versiegelung
+rrm_Catchment_rrm_corrSealing_label=Korrektur Versiegelungsgrad
 rrm_Catchment_rrm_corrSealing_tooltip=Korrekturfaktor Versiegelungsgrad [-] (> 0.0)
 rrm_Catchment_rrm_corrMaxPerc_label=Korrektur Perkolationsrate
 rrm_Catchment_rrm_corrMaxPerc_tooltip=Korrekturfaktor der maximalen Perkolationsrate [-] (> 0.0)
@@ -321,7 +321,7 @@ rrm_bodenschichtkorrektur_rrm_retlay_tooltip=Korrekturfaktor Interflow, multipli
 rrm_grundwasserabfluss_description=Grundwasserrelation
 rrm_grundwasserabfluss_label=Grundwasserrelation
 rrm_grundwasserabfluss_rrm_gwwi_label=Anteil GW-Abfluss
-rrm_grundwasserabfluss_rrm_gwwi_tooltip=Anteil des Grundwasserabflusses Nachbargebiet (Summe \= 1)
+rrm_grundwasserabfluss_rrm_gwwi_tooltip=Anteil des Grundwasserabflusses Nachbargebiet [%] (Summe \= 100)
 rrm_grundwasserabfluss_rrm_ngwzu_label=Teilgebiet
 rrm_grundwasserabfluss_rrm_ngwzu_tooltip=Grundwasserabfluss in Teilgebiet (Teilgebietslink)
 rrm_Node_rrm_useResultAsInflow_label=Ergebnis als Zufluss verwenden
