--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -53,6 +53,11 @@ rhbchannel.modelConstruction.gft.group.additonalOutflow=zusätzliche Abgabe (opti
 catchment.modelConstruction.gft.group.groundwaterOutflow=Grundwasser Abgabe
 catchment.modelConstruction.gft.group.tiefenGW=Tiefengrundwasser
 
+catchment.modelCompletion.gft.group.designRainfall=Bemessungsniederschlag
+catchment.modelCompletion.gft.group.snow=Schnee
+catchment.modelCompletion.gft.group.retentionTranslation=Retention - Translation
+catchment.modelCompletion.gft.group.groundwater=Grundwasser
+
 editCalibration.gft.group.catchment.correctionFactor=Korrekturfaktoren
 editCalibration.gft.group.catchment.soilFactors=Korrektur Bodenparameter
 editCalibration.gft.group.catchment.retention=Retention und Translation
