Smal improvement to layout and texts of simulation control

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -625,13 +625,13 @@ SetBasicModelDelegate.3=Please select a calculation case in the navigator
 SetBasicModelDelegate.4=Updating basic model from calculation case\:
 SetBasicModelDelegate.5=Update Timeseries
 SetBasicModelDelegate.6=See Details\:
-SimulationCalculationFeatureControl.0=Here you can review some result files and the logs of the calculation.
+SimulationCalculationFeatureControl.0=Last calculation
 SimulationCalculationFeatureControl.1=Please wait while updating...
 SimulationCalculationFeatureControl.10=Statistics
 SimulationCalculationFeatureControl.11=Displays the statistics in excel
-SimulationCalculationFeatureControl.12=Calculate
+SimulationCalculationFeatureControl.12=Start Calculation...
 SimulationCalculationFeatureControl.13=Calculate Simulations
-SimulationCalculationFeatureControl.2=Calculation results
+SimulationCalculationFeatureControl.2=Simulation results
 SimulationCalculationFeatureControl.3=Please wait while updating...
 SimulationCalculationFeatureControl.4=Calculation log
 SimulationCalculationFeatureControl.5=Displays the calculation log.
