--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -628,9 +628,9 @@ SimulationCalculationFeatureControl.0=Hier k\u00F6nnen einige Ergebnis- und Log-
 SimulationCalculationFeatureControl.1=Aktualisiere \u2013 bitte warten...
 SimulationCalculationFeatureControl.10=Statistik
 SimulationCalculationFeatureControl.11=Statistik mit Excel öffnen
-SimulationCalculationFeatureControl.12=Berechne
+SimulationCalculationFeatureControl.12=Simulation starten...
 SimulationCalculationFeatureControl.13=Berechne Simulationen
-SimulationCalculationFeatureControl.2=Rechenergebnisse
+SimulationCalculationFeatureControl.2=Ergebnisse
 SimulationCalculationFeatureControl.3=Aktualisiere \u2013 bitte warten...
 SimulationCalculationFeatureControl.4=Berechnungs-Log
 SimulationCalculationFeatureControl.5=Zeige Log-Datei der Berechnung
