Fixed labels of corecctions factors

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -66,5 +66,5 @@ editCalibration.gft.group.calibrationParameters=Kalibrierungsparameter
 editCalibration.gft.group.initialConditions=Anfangsbedingungen
 editCalibration.gft.group.initialConditions.description=Nur bei Simulationen ohne Anfangswerte aus einer Langzeitsimulation
 
-editCalibration.gft.label.factor=Faktor
-editCalibration.gft.label.baseValue=Basiswert
+editCalibration.gft.label.factor=Korrekturfaktoren
+editCalibration.gft.label.baseValue=Basiswerte
