Fixed wrong label

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -602,7 +602,7 @@ ReplaceTimeseriesAction_1=Replace selected Timeseries
 ReplaceTimeseriesObservation_0=Replacing Timeseries failed
 ReplaceTimeseriesObservation_1=Replaced Timeseries
 ResultOutputManagementTaskHandler_0=Nodes
-ResultOutputManagementTaskHandler_1=Catchment models
+ResultOutputManagementTaskHandler_1=Sub-Catchment
 ResultOutputManagementTaskHandler_2=Storage Channels
 ResultOutputManagementTaskHandler_3=Output options
 ResultTreeFilterControl_0=Only current calculation results
