--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -454,7 +454,7 @@ LanduseTaskHandler_1=Seasonal Cycle
 LanduseTaskHandler_2=Landuse
 LinearSumBean_0=Updating catchments...
 LinearSumCatchmentModelRunner_0=Apply catchment model
-LinearSumCatchmentModelRunner_1=Failed to execute catchment model
+LinearSumCatchmentModelRunner_1=Failed to execute catchment model: %s
 LinearSumHelper_0=Failed to load stations
 MappingElementBeanLinkEditingSupport_0=<timeseries not set>
 MergeMappingsWorker_0=Analyzing the scenarios...
