--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -452,8 +452,8 @@ LanduseTaskHandler_0=Versiegelungsklassen
 LanduseTaskHandler_1=Jahresg\u00E4nge
 LanduseTaskHandler_2=Landnutzung
 LinearSumBean_0=Aktualisiere Teileinzugsgebiete...
-LinearSumCatchmentModelRunner_0=Anwendung Teileinzugsgebiet
-LinearSumCatchmentModelRunner_1=Fehler beim Anwenden des Teileinzugsgebiets
+LinearSumCatchmentModelRunner_0=Anwendung Gebietsmodell
+LinearSumCatchmentModelRunner_1=Fehler beim Anwenden des Gebietsmodells: %s
 LinearSumHelper_0=Fehler beim Laden der Stationen
 MappingElementBeanLinkEditingSupport_0=<Zeitreihe fehlt>
 MergeMappingsWorker_0=Auswertung der Szenarien\u2026.
