Validating length of timeseries against generators

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -250,7 +250,7 @@ EditGeneratorAction.0=%s. This could have happened because the model has changed
 EditGeneratorAction.1=Failed to edit the generator...
 EditGeneratorAction_0=Edit
 EditGeneratorAction_1=Edits the properties of the generator
-EditLinearSumDialog.0=Dialog has validation errors. %s
+EditLinearSumDialog.0=Dialog has validation errors.
 EditLinearSumDialog.1=Changing the parameter type needs to update the list of timeseries. Unsaved changes will be lost. Continue?
 EditLinearSumDialog_0=Edit Generator
 EditLinearSumDialog_1=Generator
