--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -249,7 +249,7 @@ EditGeneratorAction.0=%s. Kann durch \u00C4nderung des Modells passiert sein. Di
 EditGeneratorAction.1=Bearbeitung des Gebietsmodells fehlgeschlagen\u2026
 EditGeneratorAction_0=Bearbeite
 EditGeneratorAction_1=Bearbeite die Eigenschaften des Gebietsmodells
-EditLinearSumDialog.0=Dialog\u00FCberpr\u00FCfung ergab Fehler. %s
+EditLinearSumDialog.0=Dialog\u00FCberpr\u00FCfung ergab Fehler.
 EditLinearSumDialog.1=Die \u00C4nderung des Parametertyps \u00E4ndert die Liste der Zeitreihen. Nicht gespeicherte \u00C4nderungen gehen dabei verloren. Fortfahren?
 EditLinearSumDialog_0=Bearbeite Gebietsmodell
 EditLinearSumDialog_1=Gebietsmodell
